--- a/src/components/path/path.css
+++ b/src/components/path/path.css
@@ -2,9 +2,10 @@ svg {
 	max-height: 100%;
 	max-width: 100%;
 	position: absolute;
-	margin-left: auto;
-	margin-right: auto;
+	margin: auto;
 	left: 0;
 	right: 0;
+	top: 0;
+	bottom: 0;
 	text-align: center;
 }
