--- a/src/App.css
+++ b/src/App.css
@@ -41,19 +41,38 @@
 	transform: scale(0.94);
 	opacity: 0;
 	animation:
-		scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1),
-		fade-in 0.8s 0.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+		3s forwards cubic-bezier(0.5, 1, 0.89, 1) scale-in,
+		1.5s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0) fade-in,
+		3s 4s forwards cubic-bezier(0.5, 1, 0.89, 1) scale-out,
+		0.8s 4s forwards cubic-bezier(0.11, 0, 0.5, 0) fade-out;
 }
 
-@keyframes scale {
+@keyframes scale-in {
 	100% {
 		transform: scale(1);
+	}
+}
+
+@keyframes scale-out {
+	0% {
+		transform: scale(1);
+	}
+
+	100% {
+		transform: scale(0.94);
 	}
 }
 
 @keyframes fade-in {
 	100% {
 		opacity: 1;
+		filter: blur(0);
+	}
+}
+
+@keyframes fade-out {
+	100% {
+		opacity: 0;
 		filter: blur(0);
 	}
 }
