--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,22 @@
 		/* right cyan */
 }
 
+.target-in-center {
+	/* border: 1px solid yellow; */
+	background-color: rgba(255, 255, 255, 0.301);
+	position: absolute;
+	border-radius: 50%;
+	opacity: 0;
+	animation: 0.5s 4s forwards ease-in target-appear;
+	transition: var(--transition);
+}
+
+@keyframes target-appear {
+	to {
+		opacity: 1;
+	}
+}
+
+.inactive {
+	background-color: transparent;
+}
