--- a/src/components/watchLissajouxText/watchLissajouxText.css
+++ b/src/components/watchLissajouxText/watchLissajouxText.css
@@ -11,7 +11,7 @@ span {
 	animation:
 		3s forwards cubic-bezier(0.5, 1, 0.89, 1) scale-in,
 		1.5s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0) fade-in,
-		/* 3s 4s forwards cubic-bezier(0.5, 1, 0.89, 1) scale-out, */
+		3s 4s forwards cubic-bezier(0.5, 1, 0.89, 1) scale-out,
 		0.8s 2.5s forwards cubic-bezier(0.11, 0, 0.5, 0) fade-out;
 }
 
