--- a/src/components/watchLissajousText/watchLissajousText.css
+++ b/src/components/watchLissajousText/watchLissajousText.css
@@ -8,14 +8,14 @@ span {
 	font-size: 5rem;
 	transform: scale(0.94);
 	opacity: 0;
-	animation:
+	/* animation:
 		3s forwards cubic-bezier(0.5, 1, 0.89, 1) scale-in,
 		1.5s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0) fade-in,
 		3s 4s forwards cubic-bezier(0.5, 1, 0.89, 1) scale-out,
-		0.8s 2.5s forwards cubic-bezier(0.11, 0, 0.5, 0) fade-out;
+		0.8s 2.5s forwards cubic-bezier(0.11, 0, 0.5, 0) fade-out; */
 }
 
-@keyframes scale-in {
+/* @keyframes scale-in {
 	100% {
 		transform: scale(1);
 	}
@@ -43,4 +43,4 @@ span {
 		opacity: 0;
 		filter: blur(0);
 	}
-}
+} */
