--- a/src/components/path/path.css
+++ b/src/components/path/path.css
@@ -8,9 +8,9 @@ svg {
 	top: 0;
 	bottom: 0;
 	text-align: center;
-	opacity: 0;
-}
-
-.active {
 	opacity: 1;
 }
+
+/* .active {
+	opacity: 1;
+} */
