--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 
 :root {
 	--color-bg: #2d3726;
-	--color-bg-variant: #2c2c6c;
+	--color-bg-variant: #4d524a;
 	--color-primary: #e9c78f;
 	--color-primary-variant: rgba(77, 181, 255, 0.4);
 	--color-white: #fff;
