--- a/src/components/watchLissajousText/watchLissajousText.css
+++ b/src/components/watchLissajousText/watchLissajousText.css
@@ -8,6 +8,7 @@ span {
 	font-size: 5rem;
 	transform: scale(0.94);
 	opacity: 0;
+	text-shadow: 0 0 5px rgba(255, 255, 255, 0.521);
 	/* animation:
 		3s forwards cubic-bezier(0.5, 1, 0.89, 1) scale-in,
 		1.5s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0) fade-in,
