--- a/src/components/interface/interface.scss
+++ b/src/components/interface/interface.scss
@@ -1,4 +1,5 @@
 $primary: #e0e0e0;
+$button-bg: var(--color-primary);
 
 .interface {
   display: flex;
@@ -78,7 +79,7 @@ input[type='range'] {
 .number-input {
   vertical-align: middle;
   text-align: center;
-  background-color: var(--color-primary);
+  background-color: $button-bg;
   height: 20px;
   width: 40px;
   font-family: 'Poppins', sans-serif;
@@ -101,7 +102,7 @@ input[type=number] {
 	position: absolute;
 	width: 0;
 	height: 0;
-	border-top: 10px solid var(--color-primary);
+	border-top: 10px solid $button-bg;
 	border-left: 5px solid transparent;
 	border-right: 5px solid transparent;
 	top: 100%;
