--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -1,8 +1,9 @@
  .checkbox-wrapper-51 {
-	display: flex;
-	gap: 1rem;
+ 	display: flex;
+ 	gap: 1rem;
+	--gradient-color: rgba(0, 0, 0, 0.219);
  }
- 
+
  .checkbox-wrapper-51 input[type="checkbox"] {
  	visibility: hidden;
  	display: none;
@@ -19,42 +20,47 @@
  }
 
  .checkbox-wrapper-51 .toggle:before {
- 	content: "";
+	content: "";
  	position: relative;
- 	top: 1px;
- 	left: 1px;
- 	width: 40px;
- 	height: 22px;
- 	display: block;
- 	background: #c8ccd4;
+ 	top: 2px;
+	left: 1px;
+ 	width: 38px;
+ 	height: 16px;
+	display: block;
+ 	background-image: linear-gradient(0, rgba(white, 0.8), var(--gradient-color));
+ 	background-color: #c8ccd4;
  	border-radius: 12px;
- 	transition: background 0.2s ease;
+	transition: background 0.2s ease;
  }
 
  .checkbox-wrapper-51 .toggle span {
  	position: absolute;
  	top: 0;
  	left: 0;
- 	width: 24px;
- 	height: 24px;
- 	display: block;
- 	background: #fff;
+ 	width: 20px;
+ 	height: 20px;
+ 	background-color: #e0e0e0;
+ 	background-image: linear-gradient(-45deg, rgba(white, 0.8), rgba(0, 0, 0, 0.121));
  	border-radius: 50%;
- 	box-shadow: 0 2px 6px rgba(154, 153, 153, 0.75);
- 	transition: all 0.2s ease;
+ 	box-shadow: -1px -1px 2px white, 1px 1px 2px rgba(black, 0.3);
  	opacity: 1;
+ 	transition: all 0.2s ease;
  }
 
  .checkbox-wrapper-51 input[type="checkbox"]:checked+.toggle:before {
- 	background: #52d66b;
+ 	background: var(--color-primary);
+	background-image: linear-gradient(0, rgba(var(--color-primary-variant), 0.8), var(--gradient-color));
  }
 
  .checkbox-wrapper-51 input[type="checkbox"]:checked+.toggle span {
- 	transform: translateX(18px);
+ 	transform: translateX(22px);
  }
 
- .checkbox-wrapper-51 input[type="checkbox"]:checked+.toggle span path {
- 	stroke: #52d66b;
- 	stroke-dasharray: 25;
- 	stroke-dashoffset: 25;
- }
+ //    position: relative;
+ //     top: -50%;
+ //     width: 20px;
+ //     height: 20px;
+ //     background-color: $primary;
+ //     background-image: linear-gradient(-45deg, rgba(white, 0.8), transparent);
+ //     border-radius: 50%;
+ //     box-shadow: -1px -1px 2px white, 1px 1px 2px rgba(black, 0.3);
