--- a/src/components/interface/interface.module.scss
+++ b/src/components/interface/interface.module.scss
@@ -7,7 +7,8 @@ $button-bg: var(--color-primary);
 }
 
 .symbol {
-  align-self: center;
+  top: 1.8rem;
+  position: relative;
 }
 
 .range-with-number {
