--- a/src/components/sidePanel/slidePane.css
+++ b/src/components/sidePanel/slidePane.css
@@ -1,4 +1,10 @@
 .slide-pane {
+
+	font-family: 'Poppins', sans-serif;
+	background: var(--color-bg);
+	color: var(--color-white);
+	line-height: 1.7;
+
   display: flex;
   flex-direction: column;
   background: #fff;
